[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.3.1",
    "beautifulsoup4>=4.14.3",
    "ctransformers>=0.2.27",
    "duckduckgo-search>=8.1.1",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "wikipedia>=1.4.0",
]
